--- a/Data/templates/test.html
+++ b/Data/templates/test.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        html{
-            background-image: linear-gradient(to right bottom,lightblue,blue);
-            background-repeat: no-repeat;
-            background-size: cover;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <style>
-        td,th{
-            border: 1px solid black;
+        html{
+            background-image: repeating-linear-gradient(blue,skyblue);
+            background-size: cover;
+            width: 100%;
+            height: 100%;
+        }
+        h2{
+            padding-left:70px;
+            color: orangered;
+        }
+        fieldset{
+            background-color: transparent;
+            border: 2px solid white;
+            border-style: double;
+            width:fit-content;
+            height:fit-content;
+            text-align: left;
+            font-size: x-large;
+            border-radius: 10%;
+            color:black;
+            position: relative;
         }
     </style>
     <center>
-        <div>
-            <table style="border: 2px solid black;">
-                <tr>
-                    <th>Id</th>
-                    <th>username</th>
-                    <th>phone</th>
-                    <th>email</th>
-                    <th>address</th>
-                    <th>Password</th>
-                </tr>                
-                {%for x in username %}
-                <tr>
-                    <td>{{x.id}}</td>
-                    <td>{{x.name}}</td>
-                    <td>{{x.phone}}</td>
-                    <td>{{x.email}}</td>
-                    <td>{{x.address}}</td>
-                    <td>{{x.password}}</td>
-                </tr>
-                {%endfor%}
-            </table>
-        </div>
+        {% for x in username %}
+        <fieldset>
+            <h2>User Details</h2>
+            USER &nbsp;:&nbsp;&nbsp; {{x.name}}<br><br>
+            EMAIL &nbsp;: &nbsp;&nbsp;{{x.email}} <br><br>
+            PASSWORD &nbsp;:&nbsp;&nbsp;{{x.password}} <br><br>
+            PHONE &nbsp;:&nbsp;&nbsp;{{x.phone}} <br><br>
+            ADDRESS &nbsp;:&nbsp;&nbsp;{{x.address}} <br><br>
+        </fieldset>
+        {%endfor%}
     </center>
 </body>
 </html>
